# text-to-image-eval

./: .gitignore  .pre-commit-config.yaml  README.md  dev-setup.sh  pyproject.toml
.github/actions/setup-poetry-environment/: action.yml
.github/workflows/: pr-report.yml  tests.yml
clip_eval/: cli.py  compute.py  constants.py  utils.py
clip_eval/cli/: main.py  utils.py
clip_eval/common/: __init__.py  base.py  data_models.py  numpy_types.py  string_utils.py
clip_eval/dataset/: __init__.py  base.py  dataset.py  encord.py  encord_dataset.py  encord_utils.py  hf.py  provider.py  utils.py
clip_eval/dataset/types/: __init__.py  encord_ds.py  hugging_face.py
clip_eval/evaluation/: __init__.py  base.py  evaluator.py  image_retrieval.py  knn.py  linear_probe.py  utils.py  zero_shot.py
clip_eval/model/: base.py  provider.py
clip_eval/model/types/: hugging_face_clip.py  local_clip_model.py  open_clip_model.py
clip_eval/models/: CLIP_model.py  __init__.py  base.py  local.py  provider.py
clip_eval/models/types/: __init__.py  hugging_face_clip.py  local_clip_model.py  open_clip_model.py
clip_eval/plotting/: animation.py  reduction.py
notebooks/: tti_eval_Bring_Your_Own_Dataset_From_Encord_Quickstart.ipynb  tti_eval_Bring_Your_Own_Model_From_Hugging_Face_Quickstart.ipynb  tti_eval_Python_Quickstart.ipynb
plotting/: reduction.py
sources/: dataset-definition-schema.json  model-definition-schema.json
sources/datasets/: Alzheimer-MRI.json  LungCancer4Types.json  NIH-Chest-X-ray.json  chest-xray-classification.json  dataset-definition-template.json  geo-landmarks.json  plants.json  rsicd.json  skin-cancer.json  sports-classification.json
sources/datasets/definitions/: Alzheimer-MRI.json  LungCancer4Types.json  NIH-Chest-X-ray.json  chest-xray-classification.json  geo-landmarks.json  plants.json  skin-cancer.json  sports-classification.json
sources/datasets/instances/: LungCancer4Types.json  rsicd.json  sports-classification.json
sources/datasets/types/: encord_ds.py  hf.py
sources/models/: apple.json  bioclip.json  clip.json  eva-clip.json  fashion.json  model-definition-schema.json  model-definition-template.json  plip.json  pubmed.json  rsicd-encord.json  rsicd.json  siglip_large.json  siglip_small.json  street.json  tinyclip.json  vit-b-32-laion2b.json
sources/models/definitions/: eva-clip.json  fashion.json  plip.json  rsicd-encord.json  siglip_large.json  tinyclip.json
sources/models/types/: hugging_face_clip.py  local_clip.py  open_clip.py
src/: cli.py  constants.py  utils.py
src/common/: base.py  data_models.py  string_utils.py
src/dataset/: __init__.py  dataset.py  encord_dataset.py  encord_utils.py  provider.py  utils.py
src/datasets/: __init__.py  dataset.py
src/evaluation/: __init__.py  base.py  evaluator.py  knn.py  linear_probe.py  zero_shot.py
src/models/: CLIP_model.py  __init__.py  provider.py
src/plotting/: animation.py  reduction.py
src/types/: __init__.py  data_models.py  numpy_types.py
tests/common/: test_embedding_definition.py
tests/evaluation/: test_knn.py
tti_eval/: compute.py  constants.py  utils.py
tti_eval/cli/: main.py  utils.py
tti_eval/common/: __init__.py  base.py
tti_eval/dataset/: __init__.py  base.py  provider.py  utils.py
tti_eval/dataset/types/: __init__.py  encord_ds.py  (+1 more)
tti_eval/evaluation/: base.py  evaluator.py  image_retrieval.py  knn.py  linear_probe.py  utils.py  zero_shot.py
tti_eval/model/: base.py  provider.py
tti_eval/plotting/: animation.py  reduction.py
(+5 files in other folders)
