[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Cord Technologies Limited <hello@encord.com>"]
description = "Working with multiple CLIP models"
name = "multiclips"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
autofaiss = "^2.17.0"
av = "^11.0.0"
datasets = "^2.17.0"
encord = "^0.1.108"
pillow = "^10.2.0"
pydantic = "^2.6.1"
python = "^3.11"
python-dotenv = "^1.0.1"
scikit-learn = "^1.4"
torch = "^2.2.0"
torchvision = "^0.17.0"
transformers = "^4.37.2"
umap-learn = "^0.5.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.1"
toml-sort = "^0.23.1"

[tool.ruff]
ignore = []
line-length = 120
select = ["I001"]
target-version = "py311"

[tool.ruff.isort]
known-first-party = ["src"]

[tool.ruff.lint]
# ignore = [
# "B007",  # Loop control variable {name} not used within loop body
# "E501",  # Checks for lines that exceed the specified maximum character length
# "E741"  # Ambiguous variable name: {name} (e.g. allow short names in one-line list comprehensions)
# ]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
